Inseri uma nova página de js com a validação de login e estou fazendo a parte do json

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -18,10 +18,10 @@
           <br />
           <p>Entre ou faça seu cadastro para ganhar um melhor amigo!!</p>
           <form>
-            <input class="input" type="email" placeholder="E-mail" />
+            <input id="email" class="input" type="email" placeholder="E-mail" />
             <br />
-            <input class="input" type="password" placeholder="Senha" />
-            <p><button class="entrar-button">Entrar</button></p>
+            <input id="senha" class="input" type="password" placeholder="Senha" />
+            <p><button id ="login_button" onclick="logartest ()"  class="entrar-button">Entrar</button></p>
             <p class="login-link-p">
               <a href="#" class="login-link">Esqueceu sua senha?</a>
             </p>
@@ -31,5 +31,6 @@
     </main>
     <div id="footer"></div>
     <script src="./../components/render.js"></script>
+    <script src="./../js/login.js"></script>
   </body>
 </html>
