--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -16,7 +16,7 @@
         <div class="container-login">
           <h1>Faça seu login</h1>
           <br />
-          <p>Entre ou faça seu cadastro para ganhar um melhor amigo!!</p>
+          <p>Entre ou faça seu cadastro para ganhar um melhor amigo!</p>
           <form>
             <input id="email" class="input" type="email" placeholder="E-mail" />
             <br />
