mudança CPF de number para text

--- a/src/pages/CadastroAdotante.html
+++ b/src/pages/CadastroAdotante.html
@@ -21,7 +21,7 @@
           <form>
             <div id="formulario">
               Nome: <input type="text" name="nome" required /><br />
-              CPF:<input type="number" name="CPF" required /><br />
+              CPF:<input type="text" name="CPF" required /><br />
               Data de Nascimento:
               <input type="date" name="data" required /><br />
               Endereço:<input type="text" name="endereço" required /><br />
