alteração tipo telefone

--- a/src/pages/CadastroAdotante.html
+++ b/src/pages/CadastroAdotante.html
@@ -25,7 +25,7 @@
               Data de Nascimento:
               <input type="date" name="data" required /><br />
               Endereço:<input type="text" name="endereço" required /><br />
-              Telefone:<input type="number" name="telefone" required /><br />
+              Telefone:<input type="tel" name="telefone" required /><br />
               E-mail:<input type="email" name="email" required /><br />
             </div>
 
