--- a/src/pages/CadastroAdotante.html
+++ b/src/pages/CadastroAdotante.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a href="#" class="nav-link">Adote</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Ajude</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Cadastro</a></li>
+                        <li class="nav-item"><a href="./../pages/cadastrese.html">Cadastro</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
                     </ul>
                 </div>
