--- a/src/pages/cadastro-ong.html
+++ b/src/pages/cadastro-ong.html
@@ -17,14 +17,14 @@
         <a href="index.html"><img src="patinhasfelizes.png" alt="logo"></a>
         </div>
             <div class="nav-list">
-            <ul>
-                <li class="nav-item"><a href="./../pages/index.html">Início</a></li>
-                <li class="nav-item"><a href="./../pages/adote.html">Adote</a></li>
-                <li class="nav-item"><a href="#">Sobre</a></li>
-                <li class="nav-item"><a href="#">Ajude</a></li>
-                <li class="nav-item"><a href="#">Cadastro</a></li>
-                <li class="nav-item"><a href="#">Contato</a></li>
-            </ul>
+                <ul>
+                    <li class="nav-item"><a href="./../pages/index.html">Início</a></li>
+                    <li class="nav-item"><a href="./../pages/adote.html">Adote</a></li>
+                    <li class="nav-item"><a href="#">Sobre</a></li>
+                    <li class="nav-item"><a href="#">Ajude</a></li>
+                    <li class="nav-item"><a href="./../pages/cadastrese.html">Cadastro</a></li>
+                    <li class="nav-item"><a href="#">Contato</a></li>
+                </ul>
             </div>
             <div class="login-button">
                 <button><a href="login.html">Entrar</a></button>
