--- a/src/pages/cadastrese.html
+++ b/src/pages/cadastrese.html
@@ -19,11 +19,11 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="./../pages/index.html">Início</a></li>
+                    <li class="nav-item"><a href="./../pages/index.html">InÃ­cio</a></li>
                     <li class="nav-item"><a href="./../pages/adote.html">Adote</a></li>
                     <li class="nav-item"><a href="#">Sobre</a></li>
                     <li class="nav-item"><a href="#">Ajude</a></li>
-                    <li class="nav-item"><a href="./../pages/cadastrese.html">Cadastro</a></li>
+                    <li class="nav-item"><a href="#">Cadastro</a></li>
                     <li class="nav-item"><a href="#">Contato</a></li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
         <footer>
             <div class="container-footer">
                 <div class="footer-content">
-                    <a href="#">SOBRE NÓS</a>
+                    <a href="#">SOBRE NÃ“S</a>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
                         sint ex. Quidem voluptas id dicta provident, quod quam earum! Deleniti
