--- a/src/pages/ong.html
+++ b/src/pages/ong.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="imag/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./../style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./../js/app.js"></script>
 </head>
 
 <body onload="ExibirCadastro()">
